--- a/lovepercentage.html
+++ b/lovepercentage.html
@@ -27,7 +27,7 @@ function lovedata()
 </head>
 <body>
 <center>
-<h1><b>Calculate Your Love! </b></h1><br/><br/>
+<button><h1><b>Calculate Your Love Percentage! </b></h1></button><br/><br/>
 <form onsubmit= "return false" class= "w-50 m-auto" class="form-group">
   <input name="name" class="form-control text-center" placeholder="Your Name" /> <span class= "pl-4 pr-4">+</span>
   <input name="name" class="form-control text-center" placeholder="Your Partner Name"/><br/><br/>
