--- a/lovepercentage.html
+++ b/lovepercentage.html
@@ -10,7 +10,8 @@
  } 
     button{font-size:1rem;
     color:white;
-    background-color:green;}
+    background-color:green;
+    border-radius:5px;}
   
   
   </style>
