--- a/lovepercentage.html
+++ b/lovepercentage.html
@@ -11,7 +11,7 @@
     button{font-size:1rem;
     color:white;
     background-color:green;
-    border-radius:5px;}
+    border-radius:5px 5px 5px 5px;}
   
   
   </style>
