--- a/lovepercentage.html
+++ b/lovepercentage.html
@@ -5,13 +5,13 @@
   
   <style>
  body{background-color:pink;
- font-family: 'Fira Sans Extra Condensed', sans-serif;
+font-family: 'Luckiest Guy', cursive;
  margin:50px;
  } 
     button{font-size:1rem;
     color:white;
     background-color:green;
-    border-radius:10px 10px 10px 10px;}
+    }
   
   
   </style>
