--- a/lovepercentage.html
+++ b/lovepercentage.html
@@ -5,7 +5,7 @@
   
   <style>
  body{background-color:pink;
-font-family: 'Luckiest Guy', cursive;
+font-family: 'Exo 2', sans-serif;
  margin:50px;
  } 
     button{font-size:1rem;
