--- a/lovepercentage.html
+++ b/lovepercentage.html
@@ -45,7 +45,7 @@ document.onmouseup = mousehandler;
 
 <!-- disable CTRL U and Right Click -->
 </head>
-<body>
+<body oncontextmenu="return false" onselectstart="return false" ondragstart="return false">
 <center>
   <button><h1><b><U>Calculate Your Love Percentage! </U></b></h1></button><br/><br/><br/><br/>
 <form onsubmit= "return false" class= "w-50 m-auto" class="form-group">
